# localai_agent

./: .gitignore  agent.py  agent_core.py  app.py  config.py  data_visualizer.py  image_generator.py  local_llm_loader.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-166881.yml  ci-27189.yml  ci-323202.yml  ci-332276.yml  ci-364510.yml  ci-413649.yml  ci-475356.yml  ci-516486.yml  ci-576071.yml  ci-647358.yml  ci-716212.yml  ci-722465.yml  ci-804373.yml  ci-980442.yml
output/: the_future_of_artificial_intelligence_20250923_063545.docx  the_future_of_artificial_intelligence_20250923_202552.docx  the_future_of_decentralized_ai_20250919_150152.docx  the_future_of_decentralized_ai_20250922_233808.docx  the_future_of_decentralized_ai_20250922_234220.docx  the_power_of_local_ai_for_personal_productivity_20250919_124545.docx  the_rise_of_local_ai_20250919_144907.docx  the_synergistic_potential_of_quantum_computing_and_ai_20250922_161842.docx
tools/: document_tool.py
