[project]
name = "localai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "ctransformers>=0.2.27",
    "diffusers>=0.35.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchainhub>=0.1.21",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.6",
    "psutil>=7.1.0",
    "python-docx>=1.2.0",
    "stable-diffusion-cpp-python>=0.3.3",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
